add strategy to replace mote path